#13260 closed bug (fixed)
GPT: Formatting a volume kills BootMan menu entries
Reported by: | pulkomandy | Owned by: | jessicah |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Partitioning Systems/GPT | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I guess this is because 9ba5f87313016ee6534290a71e2b42bf5552593d will make GPT rewrite itself and erase parts of bootman data when doing so.
Either we should fix this, or disallow use of bootman on a GPT formatted disk. It seems they can work together, but maybe bootman does erase some parts of the GPT headers, we should check carefully (it uses some sectors after the MBR).
Steps to reproduce:
- Initialize drive with GPT
- Install Haiku to a partition
- Install BootMan and add Haiku to menu
- Make sure it works
- Reformat another partition on the GPT volume
- Reboot
- Notice bootman menu is now empty.
I use GPT but am booting from BIOS for now, so I can't use an UEFI bootloader to select which OS to boot.
Change History (5)
comment:1 by , 4 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 4 years ago
comment:3 by , 4 years ago
Perhaps in http://cgit.haiku-os.org/haiku/tree/src/apps/bootmanager/LegacyBootMenu.cpp#n188 we can test if the partitioning system is GPT and set fFirstOffset
accordingly. This would prevent Boot Manager from being installed.
comment:5 by , 12 months ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
You can't use the second sector. This is the GPT partition header. It is purely the fact that GPT requires a backup header at the end of the disk that you haven't hosed your partitioning table.
The layout of GPT partitions is: